# spotng

./: .clang-format  .devcontainer.json  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CPPLINT.cfg  README.md  StyleGuide.md  TODO.md  fmt-lint.sh  fmt.sh  package.xml  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/ccache/: action.yml
.github/workflows/: docker.yml  release.yml  test.yml
Controller/: CMakeLists.txt
Controller/Moon/: CMakeLists.txt
Hardware/: CMakeLists.txt
Hardware/src/: main.cpp
Interface/: CMakeLists.txt
Interface/Hardware/: CMakeLists.txt
Interface/Simulator/: CMakeLists.txt
Robot/: CMakeLists.txt
Robot/Moon/: CMakeLists.txt
Robot/include/: PeriodicTask.hpp
Robot/src/: PeriodicTask.cpp
Simulator/: CMakeLists.txt  main.cpp
cmake/: foraxConfig.cmake.in  packing.cmake  sdengineConfig.cmake.in  sdquadxConfig.cmake.in  sdrobotConfig.cmake.in  spotngConfig.cmake.in
dockerfiles/devel/: .devcontainer.json  Dockerfile
dockerfiles/pack/: deb.Dockerfile  rpm.Dockerfile  vcpkg-install.sh
example/: simple_test.cc
examples/: CMakeLists.txt  echo_act_itf.cc  echo_act_itf.h  example1.cc
examples/itf/: echo_act_itf.cc  echo_act_itf.h  echo_itf.cc  echo_itf.h  impl.cc  impl.h
exe/: CMakeLists.txt
include/Task/: PeriodicTask.h
include/forax/: consts.h  drive.h  estimate.h  fsm.h  interface.h  logging.h  model.h  options.h  robot.h  sensor.h  types.h
include/sd/: Types.h  types.h
include/sd/Dynamics/: Kinematics.hpp  State.h  State.hpp
include/sd/Robot/: Dynamics.h  Interface.h  Interface.hpp  Model.h  Model.hpp  Runner.h  SPI.h
include/sd/Task/: PeriodicTask.h
include/sdengine/: consts.h  drive.h  estimate.h  fsm.h  interface.h  logging.h  model.h  options.h  robot.h  sensor.h  types.h
include/sdquadx/: consts.h  drive.h  estimate.h  fsm.h  interface.h  leg.h  logging.h  model.h  options.h  robot.h  sensor.h  types.h
include/sdrobot/: consts.h  drive.h  dynamics.h  estimate.h  fsm.h  geometry.h  interface.h  leg.h  model.h  options.h  params.h  robot.h  sensor.h  types.h
include/spotng/: consts.h  drive.h  estimate.h  fsm.h  interface.h  logging.h  model.h  options.h  robot.h  sensor.h  types.h
interface/msg/: MotionCmd.msg
source/: CMakeLists.txt  CPPLINT.cfg  drive_impl.h  eigen.cc  eigen.h  geometry_impl.cc  main.cc  main.cpp  params.h  robot_impl.cc  robot_impl.h
source/Dynamics/: CMakeLists.txt  DesiredState.cpp  DesiredState.hpp  FloatingBaseModel.hpp  Inertia.hpp  Rotation.hpp  Spatial.hpp
source/Exe/: CMakeLists.txt  main.cpp
source/Exe/Hardware/: Interface.cpp  Interface.hpp
source/Hardware/: CMakeLists.txt  Interface.cpp  Interface.hpp
source/Kinematics/: Orientation.hpp  Rotation.hpp
source/Robot/: CMakeLists.txt  Dynamics.cpp  Model.cpp  Model.hpp  Runner.cpp  Runner.hpp
source/Robot/Interface/Hardware/: Interface.cpp  Interface.hpp
source/Task/: CMakeLists.txt  PeriodicTask.cpp
source/common/: eigen.cc
source/controllers/: CMakeLists.txt  fsm.cc  gait_skd.cc  jpos_init.cc  leg.cc  leg.h  leg_ctrl.cc  state_cmd.cc  state_cmd.h  wbc.cc
source/controllers/fsm/: safety_checker.cc  state_ctrl.cc
source/controllers/fsm/state/: balance_stand.cc  balance_stand.h  init.cc  init.h  locomotion.cc  locomotion.h  off.cc  off.h  ready.cc  ready.h  recovery_stand.cc  recovery_stand.h  stand_up.cc  stand_up.h
source/controllers/mpc/: cmpc.cc  cmpc.h  foot_swing.cc  foot_swing.h  gait.cc  gait.h
source/controllers/wbc/: kin_wbc.cc  wbic.cc
source/controllers/wbc/contact/: single.cc  single.h
source/controllers/wbc/task/: body_ori.cc  body_ori.h  body_pos.cc  body_pos.h  link_pos.cc  link_pos.h
source/drive/: drive_ctrl_impl.cc  drive_ctrl_impl.h
source/dynamics/: CMakeLists.txt  bspline.cc  desired_state.h  fb_model.cc  fb_model.h  floating_base_model.h  inertia.cc  inertia.h  math.cc  rotation.cc  rotation.h  rotation_test.cc  spatial.cc  spatial.h  types.h
source/eigen/: types.cc  types.h
source/estimate/: contact.cc  contact.h  estimate_ctrl_impl.cc  estimate_ctrl_impl.h  impl.cc  impl.h  joints.cc  joints.h  orientation.cc  orientation.h  pos_vel.cc  pos_vel.h
source/estimators/: CMakeLists.txt  contact.cc  estimator.h  orientation.cc  pos_vel.cc
source/externlib/: eigen.cc  eigen.h
source/fsm/: impl.cc  impl.h  legctrl.cc  legctrl.h  safety_checker.cc  safety_checker.h
source/fsm/state/: balance_stand.cc  balance_stand.h  init.cc  init.h  locomotion.cc  locomotion.h  recovery_stand.cc  recovery_stand.h
source/geometry/: quaternions_impl.cc
source/hardware/: CMakeLists.txt  interface.cc  interface.h
source/leg/: impl.cc  jpos_init_impl.cc  jpos_init_impl.h  leg_ctrl_impl.cc  leg_ctrl_impl.h
source/math/: algebra.cc  algebra.h  interpolate.cc  interpolate.h  utils.cc  utils.h
source/model/: float_base.cc  float_base.h  float_base_impl.cc  float_base_impl.h  quadruped.cc  quadruped_impl.cc  quadruped_impl.h
source/mpc/: cmpc.cc  cmpc.h  foot_swing.cc  foot_swing.h  gait.cc  gait.h  gait_skd.cc  gait_skd.h  mpc.h  qp.cc  qp.h  qp_solver.cc  qp_solver.h
source/robot/: CMakeLists.txt  impl.cc  impl.h  leg_impl.cc  leg_impl.h  model.cc  model.h  options_impl.cc  robot_ctrl_impl.cc  robot_ctrl_impl.h  robot_impl.cc  robot_impl.h  runner.cc  runner.h
source/skd/: foot_swing.cc  foot_swing.h  gait.h  od_gait.cc  od_gait.h  state_des.cc  state_des.h
source/utils/: debug.cc  debug.h  eigen.cc  eigen.h  testitf.cc  testitf.h
source/wbc/: contact.cc  contact.h  in_data.h  kin_wbc.cc  kin_wbc.h  task.cc  task.h  wbc.h  wbc_ctrl.cc  wbc_ctrl.h  wbic.cc  wbic.h
source/wbc/task/: body_ori.cc  body_ori.h  body_pos.cc  body_pos.h  foot_contact.cc  foot_contact.h  foot_pos.cc  foot_pos.h  link_pos.cc  link_pos.h
src/: CMakeLists.txt  robot.cpp
src/Controller/: CMakeLists.txt
src/Robot/: CMakeLists.txt
src/Task/: PeriodicTask.cpp
test/: CMakeLists.txt  dynamics_inertia_test.cc  echo_act_itf.cc  echo_act_itf.h  example.cc  example1_test.cc  main.cc  testitf.cc  testitf.h
test/itf/: impl.cc  impl.h
(+44 files in other folders)
