<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sdrobot</name>
  <version>0.0.1</version>
  <description>Stardusts Robot</description>
  <maintainer email="yandy.ding@gmail.com">Yan Ding</maintainer>
  <license>NO</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sdapi</depend>>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
